// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User USER_LOGIN should handle REQUEST 1`] = `
Object {
  "error": null,
  "isLoggedIn": false,
  "user": null,
}
`;

exports[`User USER_LOGIN should handle SUCCESS 1`] = `
Object {
  "error": null,
  "isLoggedIn": true,
  "user": undefined,
}
`;

exports[`User USER_LOGOUT should handle REQUEST 1`] = `
Object {
  "error": null,
  "isLoggedIn": false,
  "user": null,
}
`;

exports[`User USER_LOGOUT should handle SUCCESS 1`] = `
Object {
  "error": null,
  "isLoggedIn": false,
  "user": null,
}
`;

exports[`User should return the initial state 1`] = `
Object {
  "error": null,
  "isLoggedIn": false,
  "user": null,
}
`;
